--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
-    <title>React App</title>
+    <title>Shubham Jha</title>
   </head>
   <body style="background-color: black;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
